--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -658,7 +658,7 @@
                                 </i> Interest Rate
                             </h4>
                             <p>
-                                - ${incomingId[0].interest_rate} %
+                                ${incomingId[0].interest_rate} %
                             </p>
                             <hr />
                            
@@ -732,7 +732,7 @@
                                 </i> Interest Rate
                             </h4>
                             <p>
-                                - ${incomingId[1].interest_rate} %
+                                ${incomingId[1].interest_rate} %
                             </p>
                             <hr />
                            
@@ -802,7 +802,7 @@
                                 </i> Interest Rate
                             </h4>
                             <p>
-                                - ${incomingId[2].interest_rate} %
+                                ${incomingId[2].interest_rate} %
                             </p>
                             <hr />
                            
