--- a/views/index.ejs
+++ b/views/index.ejs
@@ -209,6 +209,8 @@
 
     /* add data to loan card */
     $('.carousel-item').on('click', function (e) {
+      console.log('clicked on carousel item');
+      console.log(e.target);
       const idInfo = e.target.parentNode.id || $(e.target).attr('id');
       if (idInfo) {
         let type = idInfo;
@@ -217,7 +219,7 @@
     });
     /* add data to loan card */
 
-    /* Append Function */
+    /* Append Function add data to loan-card*/
     function append(loan_type) {
       console.log('currentLoanData', currentLoanData);
       $('.loan-card').empty();
@@ -490,9 +492,8 @@
           `);  
           
           if(compareCounter == 3){
-            console.log( $('#bb8fa7bd-0692-44e7-b5a8-1bab2a4a3021')[0].checked);
-            console.log( $('#90fdbc7a-b826-47c1-b1be-257846a9eb65')[0].checked);            
-            console.log( $('#bb8fa7bd-0692-44e7-b5a8-1bab2a4a3021').checked);
+            
+           
 
             currentLoanData.forEach((el) => {
               if( $(`#${el.bank_id}`)[0].checked ){
