adjusted footer height

--- a/views/_layouts/footer.ejs
+++ b/views/_layouts/footer.ejs
@@ -1,7 +1,7 @@
 <div class="section " style="background:#0C2074;">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 text-center mb-5">
+            <div class="col-md-12 text-center my-2">
                 <p class="text-white footer-text">Email us at <a href="mailto:hello@esatya.io"
                         class="text-white">hello@esatya.io</a></p>
                 <a href="https://www.facebook.com/eSatya8848/" class="text-white"> <i
