--- a/public/materialui/assets/css/material-kit.css
+++ b/public/materialui/assets/css/material-kit.css
@@ -18273,7 +18273,8 @@ footer .pull-center {
 }
 
 .section {
-  padding: 70px 0;
+  padding: 10px 0;
+  height: 195px;
 }
 
 .profile-page .page-header {
