--- a/views/index.ejs
+++ b/views/index.ejs
@@ -127,7 +127,7 @@
       <div class="row ">
         <div class ="col-md-9 row compare-row">         
         </div>        
-        <div class="col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-md-3 d-flex align-items-center justify-content-end">
           <button class="btn btn-primary" id="compare_button">
             Compare
             </a>
@@ -486,7 +486,7 @@
                       </button>                     
                     </div>
                   </div>                  
-                  <h4 id="first-text">${checkbox.value}</h4>
+                  <p id="first-text">${checkbox.value}</p>
               </div>
             </div>
           `);  
