--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -42,6 +42,8 @@ hr {
 .compare-popup {
   background-color: #e2e2e2;
   padding: 0px 0 5px 0;
+  margin: 0 0px;
+  z-index: 1;
 }
 .compare-popup h3 {
   font-weight: 900;
@@ -162,6 +164,7 @@ table tr p {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
+
 
 .compare-dropdown-row {
   width: 300px;
@@ -297,3 +300,31 @@ table tr p {
   padding: 0;
   margin: 0;
 }
+
+/* scroll to top button*/
+
+.btn-scroll-to-top {
+  position: fixed;
+  right: 15px;
+  bottom : 10px;
+  width : 50px;
+  height: 50px;
+  background: #0c2074;
+  box-shadow : 0 0 10px rgba(0,0,0,0.25);
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+  border:none;
+  border-radius: 5px;
+  padding: 2px auto;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-scroll-to-top:active {
+  background: #2039a2;
+}
+
+/* scroll to top button*/
