--- a/views/_layouts/footer.ejs
+++ b/views/_layouts/footer.ejs
@@ -1,4 +1,4 @@
-<div class="section " style="background:#0C2074;">
+<div class="section"  id = "footer-card"style="background:#0C2074;">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center my-2">
@@ -26,7 +26,7 @@
                 <p class="text-white footer-text"><a href="Contact" class="text-white">Contact</a></p>
             </div>
             <div class="col-md-4"></div>
-            <div class="col-md-12 text-center mt-3 text-white">
+            <div class="col-md-12 text-center mt-2 text-white">
                 <p class="footer-text">Powered by 2019 Ⓒ <a href="https://esatya.io/" style="color:#eccf17">eSatya</a>.
                     Designed by <a href="https://rumsan.com" style="color:#eccf17">Rumsan</a>
                 </p>
